mobile overflow fixed

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,31 +1,32 @@
-.Button {
-    position: relative;
-    z-index: 1;
-    cursor: pointer;
-    background-color: transparent;
-    border: 1px solid #fff;
-    border-radius: 6px;
-    color: #fff;
-    padding: 0.25rem 1.5rem;
-    font-weight: 200;
-    transition: background-color 300ms;
-
-    &:hover {
-        background-color: rgba($color: #fff, $alpha: 0.25);
-    }
-}
-
 .button-container {
     position: relative;
     z-index: 0;
+
+    .Button {
+        position: relative;
+        z-index: 1;
+        cursor: pointer;
+        background-color: transparent;
+        border: 1px solid #fff;
+        border-radius: 6px;
+        color: #fff;
+        padding: 0.25rem 1.5rem;
+        font-weight: 200;
+        transition: background-color 300ms;
+    
+        &:hover {
+            background-color: rgba($color: #fff, $alpha: 0.25);
+        }
+    }
 
     .confetti {
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        width: 500%;
-        height: 500%;
+        width: 100%;
+        aspect-ratio: 1;
         z-index: -1;
+        box-sizing: unset;
     }
 }
